สร้างโดยใช้ Colaboratory

--- a/Report_Capstone_Bangkok.ipynb
+++ b/Report_Capstone_Bangkok.ipynb
@@ -6,7 +6,7 @@
       "name": "Report_Capstone-Bangkok.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMOCKJ2jy7vLAoti4dItJeT",
+      "authorship_tag": "ABX9TyMhVlnF0LlRtcTHT2nctFgC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,6 +69,8 @@
       },
       "source": [
         "##Business Problem\n",
+        "How to find a suitable restaurant business location in Bangkok?\n",
+        "\n",
         "From the information, Bangkok is the city with the highest population density in Thailand. There are many buildings and meeting places. Therefore, it is interesting for investors to build a business, specifically a restaurant business. But it is difficult to find the suitable place for the restaurant location. The problem with stakeholders is finding a place with less restaurant density and high population density. Therefore, in this project, we will use data science methods to analyze the data to display the results for stakeholders to consider as part of business decision-making."
       ]
     },
@@ -108,12 +110,92 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XD83RrXGEN4K"
+      },
+      "source": [
+        "Population data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pkAsMElLD43R"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Yr6PnU6QSDd1"
       },
       "source": [
-        ""
+        "path = \"https://raw.githubusercontent.com/momijizen/Coursera_Capstone/main/population.csv\"\n",
+        "df_population = pd.read_csv(path)\n",
+        "df_population.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nl1IJvOKFLDA"
+      },
+      "source": [
+        "Bangkok boundary coordinates data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bu8GoUpVE9CL"
+      },
+      "source": [
+        "import json\n",
+        "# tranforming json file into a pandas dataframe library\n",
+        "from pandas.io.json import json_normalize"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N691PsPKEw-K"
+      },
+      "source": [
+        "!wget -q 'https://raw.githubusercontent.com/momijizen/Coursera_Capstone/main/bangkok_district.geojson'\n",
+        "bbk = json.load(open('bangkok_district.geojson'), encoding='utf-8') \n",
+        "df = json_normalize(bbk[\"features\"])\n",
+        "df.head()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lhZV25sFEUOr"
+      },
+      "source": [
+        "Location data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vwH2dnpuD30R"
+      },
+      "source": [
+        "url = \"https://raw.githubusercontent.com/momijizen/Coursera_Capstone/main/borough.csv\"\n",
+        "df_province = pd.read_csv(url)\n",
+        "df_province.head()"
       ],
       "execution_count": null,
       "outputs": []
